# satisfactory_calcualtor

./: .gitignore  Cargo.toml  Trunk.toml  flake.nix  index.html  out  package-lock.json  package.json  run-tailwind.sh  service-worker.ts  tailwind.config.js  tsconfig.json  wrangler.toml
.github/workflows/: build_and_deploy.yml  rust.yml
assets/: satisfactory_item_analysis.json5
assets/public/: manifest.json
src/: adapters.rs  lib.rs  main.rs  recipe.rs
src/adapters/: dsp_adapter.rs  factorio_adapter.rs  mod.rs  satisfactory_adapter.rs  satisfactory_asset.rs
src/components/: analysis_tab.rs  breakdown.rs  calc_tab.rs  factory_planner_app.rs  mod.rs  raw_resource.rs  recipes_tab.rs  summaries.rs
src/model/: mod.rs
