[package]
name = "factory-planner"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
itertools = "0.14.0"
js-sys = "0.3.77"
json5 = "0.4.1"
leptos = { version = "0.8.2", features = ["csr"] }
once_cell = "1.21.3"
petgraph = "0.8.2"
reactive_stores = "0.2.2"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Element", "DomRect"] }
